fix double-click copy and text alignment with new kanji-furi display

--- a/html/assets/css/page/sentencePage.css
+++ b/html/assets/css/page/sentencePage.css
@@ -1,3 +1,7 @@
+.furigana-kanji-container {
+    text-align: left;
+}
+
 .inline-kana-preview.small, .kanji-preview.small, .inline-kana-preview.small {
     font-size: x-large;
 }
